added fuyu link

--- a/src/posts/2024/02/16/16.md
+++ b/src/posts/2024/02/16/16.md
@@ -5,8 +5,8 @@ tags: post
 layout: post.html
 ---
 
-Today I Learned that the Fuyu architecture and the  best architecture for OCR
-recognition according to
+Today I Learned that the [Fuyu](https://www.adept.ai/blog/fuyu-8b) architecture
+and the  best architecture for OCR recognition according to
 [paperswithcode](https://paperswithcode.com/sota/optical-character-recognition-on-benchmarking)
 are the same. 
 
