valid syntax for dummy vars

--- a/src/posts/2025/01/23.md
+++ b/src/posts/2025/01/23.md
@@ -13,13 +13,13 @@ It works by connecting to both APIs and posting through your account. You are
 going to need a bunch of environment variables to setup:
 
 ```bash
-export 'CONSUMER_KEY'
-export 'CONSUMER_SECRET'
-export 'BEARER_TOKEN_X'
-export 'ACCESS_TOKEN'
-export 'ACCESS_TOKEN_SECRET'
-export 'BLUESKY_HANDLE'
-export 'BLUESKY_PASSWORD'
+export CONSUMER_KEY='dummy_consumer_key'
+export CONSUMER_SECRET='dummy_consumer_secret'
+export BEARER_TOKEN_X='dummy_bearer_token'
+export ACCESS_TOKEN='dummy_access_token'
+export ACCESS_TOKEN_SECRET='dummy_access_token_secret'
+export BLUESKY_HANDLE='dummy_bluesky_handle'
+export BLUESKY_PASSWORD='dummy_bluesky_password'
 ```
 
 I am using `uv` to run the script in a self contained manner and you can run it
