path/to/ to an explanation

--- a/src/posts/2025/01/23.md
+++ b/src/posts/2025/01/23.md
@@ -26,7 +26,7 @@ I am using `uv` to run the script in a self contained manner and you can run it
 in the following way:
 
 ```bash
-uv run single_poster.py "<message>"
+uv run /path/to/single_poster.py "<message>"
 ```
 
 I then used `alias`:
